--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,8 @@
-DB_NAME=rideapp
-DB_USER=postgres.flohpovuownqytxxgrfc
+DB_NAME=ride_app
+DB_USER=postgres
 DB_PASS=Password
-DB_HOST=aws-0-ap-southeast-1.pooler.supabase.com
+DB_HOST=localhost
+DB_PORT=5432
 JWT_SECRET=supersecretkey
 RAZORPAY_KEY_ID=your_key_id
 RAZORPAY_KEY_SECRET=your_key_secret
